# np

./: .gitignore  CMakeLists.txt  README.md  ReleaseNotes.md  conanfile.txt  flake.nix  modulation_excitation.cpp  np.cpp  partition_events.cpp  version.h
.azure_pipelines/: continuous.yml  pr.yml  release.yml
.azure_pipelines/templates/: build-linux.yml  build-osx.yml  build-windows.yml  create_release.yml
.azure_pipelines_disabled/: continuous.yml  pr.yml  release.yml
.azure_pipelines_disabled/templates/: build-windows.yml
.github/workflows/: cacheNix.yml  continuous.yml  pr.yml  release.yml
.github/workflows/get-nix/: action.yml
.github/workflows/publish/: action.yml
.github/workflows/setup/: action.yml
examples/: azobenzene_defined_periods.txt  azobenzene_defined_pulses.txt
include/: config.hpp  modex.hpp  nexus.hpp  period.hpp  period_definition.hpp  pulse.hpp  pulse_definition.hpp
src/: CMakeLists.txt  config.cpp  config.h  dumpDetector.cpp  dumpEvents.cpp  dumpHistogram.cpp  dumpMonitor.cpp  getEvents.cpp  main.cpp  modex.cpp  modex.h  modulation_excitation.cpp  nexus.cpp  nexus.h  nexusFile.cpp  nexusFile.h  partitionEventsIndividual.cpp  partitionEventsSummed.cpp  partition_events.cpp  period.cpp  period.h  period_definition.cpp  period_definition.h  processCommon.cpp  processForwardsSummed.cpp  processIndividual.cpp  processSummed.cpp  processors.h  pulse.cpp  pulse.h  pulse_definition.h  window.cpp  window.h
